<resources>
    <string name="app_name">Habbbits</string>
    <string name="my_habbbits">My Habbbits</string>
    <string name="recommended">Recommended</string>
    <string name="achievements">Achievements</string>
    <string name="profile">Profile</string>
    <string name="all">All</string>
    <string name="create">Habbbits</string>
    <string name="total_points">"Total Points: "</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="created">Habit created</string>
    <string name="updated">Habit updated</string>
    <string name="create_title">CREATE</string>
    <string name="create_title_right_space">CREATE %s</string>
    <string name="update_title">UPDATE</string>
    <string name="update_title_right_space">UPDATE %s</string>
    <string name="update_not_valid">Should complete all the fields</string>
    <string name="required">Required</string>
    <string name="too_late">TOO LATE...</string>
    <string name="time_left">Days: %s, Hours: %s</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="empty" />
    <string name="must_be_same">MUST BE THE SAME</string>
    <string name="log_out">Log out</string>
    <string name="sure_log_out">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Habit deleted</string>
    <string name="profileUpdated">Profile updated</string>
    <string name="passwordUpdated">Password updated</string>
    <string name="failChangingPassword">FAIL CHANGING PASSWORD</string>
    <string name="tryingToChangePassword">TRYING TO CHANGE PASSWORD...</string>
    <string name="verifying_user">VERIFYING USER...</string>
    <string name="accept">Accept</string>
    <string name="done">DONE</string>
    <string name="no_achivements_yet">NO ACHIVEMENTS YET</string>
    <string name="habbbit">HABBBIT</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="frequency">Frequency</string>
    <string name="initial_date">Initial Date</string>
    <string name="public_checkbox">Public</string>
    <string name="habbbits">HABBBITS</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="password">Password</string>
    <string name="oculted_password">********</string>
    <string name="login_not_capital_letters">Login</string>
    <string name="no_habbbits_yet">NO HABBBITS YET</string>
    <string name="number_of_habits">Number of Habits</string>
    <string name="update">UPDATE</string>
    <string name="log_out_capitals">LOG OUT</string>
    <string name="no_recommended_habbbits_yet">NO RECOMMENDED HABBBITS YET</string>
    <string name="example">Example</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_not_capital_letters">Register</string>
    <string name="sure_to_delete">Sure to delete?</string>
    <string name="new_password">New Password</string>
    <string name="name_with_two_points">Name:</string>
    <string name="date_with_two_points">Date:</string>
    <string name="points_with_two_points">Points:</string>
    <string name="clock">Clock</string>
    <string name="use">USE</string>
    <string name="login_incorrect">Login incorrect</string>
    <string name="no_internet">NO INTERNET AVAILABLE</string>
    <string name="password_length_error">It must be eight or more characters</string>
    <string name="password_lowercase_error">It must contain a non capital letter</string>
    <string name="password_uppercase_error">It must contain a capital letter</string>
    <string name="password_number_error">It must contain a number</string>
</resources>