<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundGeneral"
    tools:context=".presentation.fragments.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textStyle="bold"
        android:text="@string/habbbits"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/email"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameInputLayout"
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/softGreen"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1.2dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/black"
        app:cursorColor="@color/black"
        android:hint="@string/example_mail_com"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:padding="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/password"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/MyOutlinedTextInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="outline"
        app:boxBackgroundColor="@color/softGreen"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="1dp"
        app:boxStrokeWidthFocused="1.2dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/black"
        app:cursorColor="@color/black"
        android:hint="@string/oculted_password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/black"
            android:textSize="14sp"
            android:padding="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        app:strokeWidth="1dp"
        app:strokeColor="@color/black"
        android:text="@string/login_not_capital_letters"
        android:textColor="@color/white"/>

</LinearLayout>