<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundGeneral"
    tools:context=".presentation.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/profile_form_container"
        android:padding="20dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="350dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <TextView
                android:id="@+id/username_lable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/lightGreen"
                android:text="@string/name"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/profile_form_input"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                />
            <TextView
                android:id="@+id/email_lable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/email"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/profile_form_input"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                />
            <TextView
                android:id="@+id/number_habits_lable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/number_of_habits"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/number_habits"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/profile_form_input"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                />
            <TextView
                android:id="@+id/password_lable"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/password"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/oculted_password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:background="@drawable/profile_form_input"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingHorizontal="60dp"
                android:paddingVertical="16dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/purple"
                android:textColor="@color/white"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out_capitals"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingHorizontal="60dp"
                android:paddingVertical="16dp"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                />
        </LinearLayout>
        </ScrollView>
    </LinearLayout>


</FrameLayout>