<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundGeneral"
    tools:context=".presentation.fragments.UpdateProfileFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:minWidth="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/profile_form_container"
        android:padding="20dp"
        >
        <TextView
            android:id="@+id/username_lable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/lightGreen"
            android:text="@string/name"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/profile_form_input"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            />
        <TextView
            android:id="@+id/email_lable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/email"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:background="@drawable/profile_form_input"
            android:paddingStart="15dp"
            android:paddingEnd="5dp"
            />

        <TextView
            android:id="@+id/password_lable"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/password"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/password"
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:text="@string/oculted_password"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_gravity="start"
                android:gravity="center_vertical"
                android:background="@drawable/profile_form_input"
                android:paddingStart="15dp"
                android:paddingEnd="5dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update_password"
                android:layout_width="48dp"
                android:layout_height="50dp"
                app:icon="@drawable/editar"
                app:iconSize="28dp"
                app:iconTint="@null"
                android:layout_gravity="end"
                android:gravity="center_vertical"
                android:backgroundTint="@color/purple"
                android:textColor="@color/white"
                app:cornerRadius="10dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/black"
                android:layout_margin="0dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingHorizontal="60dp"
            android:paddingVertical="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/purple"
            android:textColor="@color/white"
            />
    </LinearLayout>



</FrameLayout>