<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/dialog_delete_bg"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/dialog_password_form"
        android:paddingVertical="15dp"
        android:paddingHorizontal="20dp"
        >
        <TextView
            android:id="@+id/password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/MyOutlinedTextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/softGreen"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1.2dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"
            android:hint="@string/oculted_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/new_password_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPasswordInputLayout"
            style="@style/MyOutlinedTextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/softGreen"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1.2dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"
            android:hint="@string/oculted_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/confirm_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            style="@style/MyOutlinedTextInputLayout"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="@color/softGreen"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:boxStrokeWidthFocused="1.2dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/black"
            android:hint="@string/oculted_password"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/black"
                android:textSize="14sp"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm_update"
            android:layout_width="125dp"
            android:layout_height="60dp"
            android:text="@string/update"
            android:textSize="20sp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/purple"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:cornerRadius="10dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close_modal"
            android:layout_width="125dp"
            android:layout_height="60dp"
            app:icon="@drawable/cerrar"
            app:iconSize="25dp"
            app:iconTint="@null"
            app:iconGravity="textEnd"
            android:paddingStart="14dp"
            android:paddingEnd="24dp"
            android:layout_marginStart="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:backgroundTint="@color/softGreen"
            app:strokeWidth="1dp"
            app:strokeColor="@color/black"
            app:cornerRadius="10dp"
            />
    </LinearLayout>
</LinearLayout>